[package]
name = "heh"
version = "0.3.1"
edition = "2021"
description = "A cross-platform terminal UI used for modifying file data in hex or ASCII."
readme = "README.md"
repository = "https://github.com/ndd7xv/heh"
license = "MIT"
categories = ["command-line-utilities", "text-editors"]
rust-version = "1.64.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = {package = "ratatui", version = "0.20", default-features = false, features = ["crossterm"]}
crossterm = "0.26"
clap = { version = "4.2", features = ["derive"] }
arboard = { version = "3.2", default-features = false }

[profile.dev]
opt-level = 1 # Default would excessively lag

# cargo +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu --release
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
