[package]
name = "heh"
version = "0.4.1"
edition = "2021"
description = "A cross-platform terminal UI used for modifying file data in hex or ASCII."
readme = "README.md"
repository = "https://github.com/ndd7xv/heh"
license = "MIT"
categories = ["command-line-utilities", "text-editors"]
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
clap = { version = "4.4.10", features = ["derive"] }
arboard = { version = "3.3.0", default-features = false }
memmap2 = "0.9.0"
crossbeam = "0.8.2"

[profile.dev]
opt-level = 1 # Default would excessively lag

# cargo +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu --release
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
