[package]
name = "heh"
version = "0.6.1"
edition = "2021"
description = "A cross-platform terminal UI used for modifying file data in hex or ASCII."
readme = "README.md"
repository = "https://github.com/ndd7xv/heh"
license = "MIT"
categories = ["command-line-utilities", "text-editors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.28.0"
clap = { version = "4.5.16", features = ["derive"] }
arboard = { version = "3.4.0", default-features = false }
memmap2 = "0.9.4"
crossbeam = "0.8.4"
hex = "0.4.3"

[profile.dev]
opt-level = 1 # Default would excessively lag

# cargo +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu --release
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
